<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestaoDoisActivity" >

    <TextView
        android:id="@+id/QuestaoDois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/QuestaoDois"
        android:textSize="10pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonConfimarQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupQ2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/ConfirmaQuestao" />

    <RadioGroup
        android:id="@+id/radioGroupQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/QuestaoDois"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/opcaoUmQuestaoDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opcaoUmQuestaoDois" />

        <RadioButton
            android:id="@+id/opcaoDoisQuestaoDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoDoisQuestaoDois" />

        <RadioButton
            android:id="@+id/opcaoTresQuestaoDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoTresQuestaoDois" />

        <RadioButton
            android:id="@+id/opcaoQuatroQuestaoDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoQuatroQuestaoDois" />
    </RadioGroup>

</RelativeLayout>