<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestaoTresActivity" >

    <Button
        android:id="@+id/buttonConfirmaQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/ConfirmaQuestao" />

    <RadioGroup
        android:id="@+id/radioGroupQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/QuestaoTres"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/opcaoUmQuestaoTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opcaoUmQuestaoTres" />

        <RadioButton
            android:id="@+id/opcaoDoisQuestaoTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoDoisQuestaoTres" />

        <RadioButton
            android:id="@+id/opcaoTresQuestaoTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoTresQuestaoTres" />
        
        <RadioButton
            android:id="@+id/opcaoQuatroQuestaoTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoQuatroQuestaoTres" />
    </RadioGroup>

    <TextView
        android:id="@+id/QuestaoTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/QuestaoTres"
        android:textSize="10pt"
        android:textStyle="bold" />

</RelativeLayout>