<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestaoCincoActivity" >

    <TextView
        android:id="@+id/QuestaoCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/QuestaoCinco" 
        android:textSize="12pt"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupQ5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/QuestaoCinco"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="45dp" >

        <RadioButton
            android:id="@+id/opcaoUmQuestaoCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opcaoUmQuestaoCinco" />

        <RadioButton
            android:id="@+id/opcaoDoisQuestaoCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoDoisQuestaoCinco" />

        <RadioButton
            android:id="@+id/opcaoTresQuestaoCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoTresQuestaoCinco" />
        
        <RadioButton
            android:id="@+id/opcaoQuatroQuestaoCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoQuatroQuestaoCinco" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirmaQ5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupQ5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/ConfirmaQuestao" />

</RelativeLayout>