<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestaoQuatroActivity" >

    <RadioGroup
        android:id="@+id/radioGroupQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/QuestaoQuatro"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="36dp" >

        <RadioButton
            android:id="@+id/opcaoUmQuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opcaoUmQuestaoQuatro" />

        <RadioButton
            android:id="@+id/opcaoDoisQuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoDoisQuestaoQuatro" />

        <RadioButton
            android:id="@+id/opcaoTresQuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoTresQuestaoQuatro" />
        
         <RadioButton
            android:id="@+id/opcaoQuatroQuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoQuatroQuestaoQuatro" />
    </RadioGroup>

    <TextView
        android:id="@+id/QuestaoQuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/QuestaoQuatro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="11pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonConfirmaQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupQ4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/ConfirmaQuestao" />

</RelativeLayout>
