<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResultadoActivity" >

    <TextView
        android:id="@+id/textViewEndGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/End"
        android:textSize="19pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEndGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:text="@string/Resultado"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/JogarNovamente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/JogarNovamente" />

    <Button
        android:id="@+id/Sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/JogarNovamente"
        android:layout_centerHorizontal="true"
        android:text="@string/Sair" />

</RelativeLayout>